implement dagger, retrofit, reactiveX

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
+
+        <variable
+            name="viewModel"
+            type="pl.karolmichalski.tumblrphotos.presentation.MainViewModel" />
 
     </data>
 
@@ -9,7 +14,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".presentation.MainActivity">
 
         <TextView
             android:layout_width="wrap_content"
