--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="java.lang.Integer" />
+
+        <import type="android.view.View" />
 
         <variable
             name="repo"
@@ -19,26 +24,57 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:onClick="@{(view) -> listener.onClick(view)}"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/name"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@{repo.name}"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@id/stars"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:text="Retrofit" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/stars"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_star_24px"
+                android:gravity="center"
+                android:minWidth="65dp"
+                android:text="@{Integer.toString(repo.stargazersCount)}"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="29585" />
+
+            <TextView
+                android:id="@+id/fullName"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@{repo.fullName}"
+                android:textStyle="italic"
+                app:layout_constraintEnd_toEndOf="@id/name"
+                app:layout_constraintStart_toStartOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/name"
                 tools:text="square/retrofit" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="@{repo.description}"
+                android:visibility="@{repo.description != null ? View.VISIBLE : View.GONE}"
+                app:layout_constraintTop_toBottomOf="@id/fullName"
+                tools:text="@tools:sample/lorem/random" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 </layout>
