move repos and details to screens package add DecisionDialog

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,11 +9,7 @@
 
         <variable
             name="viewModel"
-            type="pl.karolmichalski.githubrepos.presentation.details.DetailsViewModel" />
-
-        <variable
-            name="listener"
-            type="pl.karolmichalski.githubrepos.presentation.details.DetailsListener" />
+            type="pl.karolmichalski.githubrepos.presentation.screens.details.DetailsViewModel" />
 
     </data>
 
@@ -34,7 +30,8 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
 
                     <TextView
                         android:id="@+id/name"
@@ -103,10 +100,8 @@
                         android:layout_height="wrap_content"
                         android:text="@{viewModel.repo.owner.login}"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@id/userUrl"
                         app:layout_constraintEnd_toStartOf="@id/avatar"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
                         tools:text="square" />
 
                     <ImageView
@@ -119,20 +114,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         tools:src="@drawable/placeholder_avatar" />
 
-                    <TextView
-                        android:id="@+id/userUrl"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:autoLink="web"
-                        android:text="@{viewModel.repo.owner.reposUrl}"
-                        app:layout_constraintEnd_toEndOf="@id/login"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/login"
-                        tools:text="https://api.github.com/users/square/repos" />
-
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
 
             </androidx.cardview.widget.CardView>
 
